# particleflow

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  README_clic.md  README_cms.md  README_delphes.md  README_internal.md  README_lxplus.md  README_tallinn.md  README_tf.md  faq.md  particleflow_spec.yaml  pixi.toml  plan.md  program.md  pu_calibration.ipynb  pyproject.toml  requirements.txt  setup.py  timing.md  uv.singularity  validation_cms.yaml  validation_key4hep.yaml
apptainer/: python_base.txt  python_tf.txt  tf-2.13.0.singularity
clic/: convert_to_parquet.py  dumper.py  dumper_hepsim.py  process.sh  process_data.sh  process_hepsim.sh
data/: EdgeNet_14001_ca9bbfb3bb_jduarte.best.pth  clustering.h5  preprocessing.pkl  regression.h5  regression.h5.REMOVED.git-id
delphes/: Makefile  README.md  delphes_card_CMS_PileUp.tcl  generatePileUpCMS.cmnd  install.sh  main.cc  ntuplizer.py  resolution_checks.ipynb  run_ntuple.sh  run_ntuple_qcd.sh  run_pileup.sh  run_sim.sh  run_sim_seed.sh  run_sim_seed_qcd.sh  tev14_pythia8_qcd.py  tev14_pythia8_ttbar.py  train.py  uncertainty_calibration.ipynb
docs/: map.md
fcc/: check_files.py  clicRec_e4h_input.py  clicRec_e4h_input_new.py  clic_steer.py  main19.cc  p8_ee_WW_fullhad_ecm380.cmd  p8_ee_ZH_Htautau_ecm380.cmd  p8_ee_ZZ_fullhad_ecm365.cmd  p8_ee_gg_ecm365.cmd  p8_ee_gg_ecm380.cmd  p8_ee_qcd_ecm365.cmd  p8_ee_qcd_ecm380.cmd  p8_ee_qq_ecm365.cmd  p8_ee_qq_ecm380.cmd  p8_ee_tt_ecm365.cmd  p8_ee_tt_ecm380.cmd  postprocessing.py  postprocessing_hits.py  postprocessing_old.py  pythia.py  run_pandora_timing.sh  run_sim.sh  run_sim_gun.sh  run_sim_gun_np.sh  run_sim_pu.sh  run_simulations_pu.sh
habana/: Dockerfile.habana  Dockerfile.habana1130_pytorch210  Dockerfile.habana1151_pytorch212  gaudi-pod-python-v16.yaml  gaudi-pod-python-v19-1hpu-hvd.yaml  gaudi-pod-python-v19-1hpu-nohvd.yaml  gaudi-pod-python-v19-1hpu.yaml  gaudi-pod-python-v19-2hpu.yaml  gaudi-pod-python-v19-3hpu.yaml  gaudi-pod-python-v19-4hpu.yaml  gaudi-pod-python-v19-5hpu.yaml  gaudi-pod-python-v19-6hpu.yaml  gaudi-pod-python-v19-7hpu.yaml  gaudi-pod-python-v19-8hpu.yaml  gaudi-pod-python-v19.yaml  requirements.txt  requirements_base.txt  requirements_nodeps.txt
hep_tfds/: __init__.py  cms_pf.py  delphes_pf.py
heptfds/: __init__.py  cms_utils.py
images/: cg_layer.key  diagram.html  schematic.key  tf_model.key
logs_slurm/: log_pipetrain_1363983.err  log_pipetrain_1363983.out  log_pipetrain_1363984.err  log_pipetrain_1363984.out  log_pipetrain_1384920.err  log_pipetrain_1384921.err  log_pipetrain_1384921.out  log_pipetrain_1384922.err  log_pipetrain_1384922.out  log_pipetrain_1384923.err  log_pipetrain_1384923.out
mlpf/: LRP_pipeline.py  adv_training.py  combine_dataset_prp.py  conf.py  count_parameters.py  cuda_test.py  customizations.py  dataparallel.py  ddp.py  ddp_error.py  ddp_error2.py  ddp_error3.py  divide_events.py  export_onnx.py  jet_utils.py  launcher.py  logger.py  lrp_mlpf_pipeline.py  lrp_pipeline.py  mdmm.ipynb  met_finetuning_pipeline.py  pipeline.py  produce_cms_validation_snakemake.py  produce_snakemake.py  produce_validation_snakemake.py  pyg_pipeline.py  pyg_pipeline_config.yaml  pyg_pipeline_ddp.py  pytorch_pipeline.py  script.py  ssl_evaluate.py  ssl_optimization.ipynb  ssl_pipeline.py  standardization.ipynb  timing.py  utils.py
models/: .gitattributes
notebooks/: Calibration_plots.ipynb  benchmarks.ipynb  check_clustering.ipynb  check_regression.ipynb  clic-visualize.ipynb  clic.ipynb  clic_from_root.ipynb  cms-3dplot.ipynb  cms-gunsamples-simvalidation.ipynb  cms-mlpf.ipynb  cms-simvalidation.ipynb  cms-validate-postprocessing.ipynb  cmssw.ipynb  collideml.ipynb  data.ipynb  debug-predictions.ipynb  delphes-lrp-playground.ipynb  delphes-tf-mlpf-quickstart.ipynb  delphes_dataset.ipynb  delphes_model_analysis.ipynb  dnn-visualization.ipynb  endtoend_gnn.ipynb  exploring_clic_clusters.ipynb  exploring_clic_from_root.ipynb  exploring_clic_tracks.ipynb  genpf.ipynb  genpf.ipynb.REMOVED.git-id  graph-crosscheck.ipynb  graph-structure-learning-knn-LSH.ipynb  lossfn-scans.ipynb  mean_and_std_curves.ipynb  mlpf-clic-evaluate.ipynb  my_matplotlib_rcparams  paper_plots_2023_ml_training.ipynb  particleflow.ipynb  pfnet-debug.ipynb  pfntuple_check.ipynb  prediction-visualization.ipynb  pu_vs_nopu.ipynb  python_ntuple.ipynb  (+6 more)
parameters/: clic-finetune.yaml  clic-fp16.yaml  clic-hits-bf16.yaml  clic-hits-fp16.yaml  clic-hits-ln.yaml  clic-hits.yaml  clic-test.yaml  clic.yaml  cms-dev.yaml  cms-gen-dynamicbatch.yaml  cms-gen-genjet.sh  cms-gen-regweight.yaml  cms-gen.yaml  cms-gnn-dense-big.yaml  cms-gnn-dense-dev.yaml  cms-gnn-dense-focal.yaml  cms-gnn-dense-lite.yaml  cms-gnn-dense-onecycle.yaml  cms-gnn-dense-transfer.yaml  cms-gnn-dense.yaml  cms-gnn-skipconn-v2.yaml  cms-gnn-skipconn.yaml  cms-transformer-skipconn-gun.yaml  cms-transformer-skipconn.yaml  cms-transformer.yaml  cms.yaml  delphes-bench.yaml  delphes-benchmark.yaml  delphes-gnn-skipconn-onecycle.yaml  delphes-gnn-skipconn.yaml  delphes-transformer-skipconn.yaml  delphes.yaml  pyg-clic-hits.yaml  pyg-clic-old.yaml  pyg-clic.yaml  pyg-cms-all-v10.yaml  pyg-cms-all-v11.yaml  pyg-cms-all-v12.yaml  pyg-cms-old.yaml  pyg-cms-physical.yaml  (+16 more)
scripts/: base.singularity  benchmark-sdpa-onnx.py  benchmark.py  cms-validate-onnx.py  fetch_test_data_cld.sh  fetch_test_data_cms.sh  generate_tfds.sh  get_all_data_delphes.sh  get_param.py  get_pytorch_image.sh  local_test.sh  local_test_cld.sh  local_test_clic_hits_pipeline.sh  local_test_clic_pipeline.sh  local_test_cms.sh  local_test_cms_pipeline.sh  local_test_cms_pytorch.sh  local_test_cms_tf.sh  local_test_delphes.sh  local_test_delphes_pipeline.sh  local_test_delphes_pytorch.sh  local_test_delphes_tf.sh  local_test_farouk.sh  local_test_pyg.sh  local_test_pyg_clic.sh  local_test_pyg_clic_new_setup.sh  local_test_pyg_cms.sh  local_test_pyg_delphes.sh  local_test_pyg_ssl.sh  local_test_ssl_pipeline.sh  local_test_torch.sh  onnxruntime.singularity  plot-onnx-summary.py  timing.sh  (+14 more)
(+1149 files in other folders)
